--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "node-tesseract-ocr": "^2.2.1",
     "puppeteer": "^24.6.0",
     "puppeteer-core": "^19.11.1",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "puppeteer-in-electron": "^3.0.5",
     "tesseract.js": "^4.1.4"
   },
